--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com"
+    "url": "https://github.com/wallisonfelipe/br-currency-formatter"
   },
   "keywords": [
     "formater",
